<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo_sch" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/powered_by"
        android:textSize="14sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rangpur_dc_office"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developed_by"
        android:textSize="14sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AlgoStackBD"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="15dp"/>

</LinearLayout>